Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostfilesystem
  annotations:
    description: "Запрещает использование hostPath volumes"
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostFilesystem
      validation:
        openAPIV3Schema:
          type: object
          description: "Запрещает монтирование hostPath volumes"

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostfilesystem

        violation[{"msg": msg, "details": {}}] {
          volume := input_hostpath_volumes[_]
          msg := sprintf("HostPath volume запрещён: %v", [volume.name])
        }

        input_hostpath_volumes[v] {
          v := input.review.object.spec.volumes[_]
          has_field(v, "hostPath")
        }

        # Проверка наличия поля
        has_field(obj, field) {
          obj[field]
        }
